# homebrew-3d-engine

./: .clang-format  .gitignore  CMakeLists.txt  README.md
assimp/: assimp.pc  revision.h
docs/html/: README_8md.html  annotated.html  buffers_8cpp.html  buffers_8cpp__incl.map  buffers_8cpp__incl.md5  buffers_8hh.html  buffers_8hh__dep__incl.map  buffers_8hh__dep__incl.md5  buffers_8hh__incl.map  buffers_8hh__incl.md5  buffers_8hh_source.html  camera_8cpp.html  camera_8cpp__incl.map  camera_8cpp__incl.md5  camera_8hh.html  camera_8hh__dep__incl.map  camera_8hh__dep__incl.md5  camera_8hh__incl.map  camera_8hh__incl.md5  camera_8hh_source.html  classCamera-members.html  classCamera.html  classCamera__coll__graph.map  classCamera__coll__graph.md5  classEntity-members.html  classEntity.html  classEntity__coll__graph.map  classEntity__coll__graph.md5  classImGuiRenderer-members.html  classImGuiRenderer.html  classImGuiRenderer__coll__graph.map  classIndexBuffer-members.html  classIndexBuffer.html  classIndexBuffer__coll__graph.map  classIndexBuffer__coll__graph.md5  classKeyboard-members.html  classKeyboard.html  classKeyboard__coll__graph.map  classKeyboard__coll__graph.md5  classMaterial-members.html  (+237 more)
docs/html/search/: all_0.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_1.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_9.js  classes_a.js  classes_b.js  defines_0.js  defines_1.js  defines_2.js  enums_0.js  (+73 more)
docs/latex/: README_8md.tex  annotated.tex  buffers_8cpp.tex  buffers_8cpp__incl.md5  buffers_8hh.tex  buffers_8hh__dep__incl.md5  buffers_8hh__incl.md5  buffers_8hh_source.tex  camera_8cpp.tex  camera_8cpp__incl.md5  camera_8hh.tex  camera_8hh__dep__incl.md5  camera_8hh__incl.md5  camera_8hh_source.tex  classCamera.tex  classCamera__coll__graph.md5  classEntity.tex  classEntity__coll__graph.md5  classImGuiRenderer.tex  classImGuiRenderer__coll__graph.md5  classIndexBuffer.tex  classIndexBuffer__coll__graph.md5  classKeyboard.tex  classKeyboard__coll__graph.md5  classMaterial.tex  classMaterial__coll__graph.md5  classMesh.tex  classMesh__coll__graph.md5  classModel.tex  classModel__coll__graph.md5  classMouse.tex  classMouse__coll__graph.md5  classOpenGLCallback.tex  classOpenGLCallback__coll__graph.md5  classRenderer.tex  classShader.tex  classShaderUniform.tex  classShaderUniform__coll__graph.md5  classShader__coll__graph.md5  classTexture.tex  (+110 more)
docs_make/: Doxyfile.in
glfw/: CMakeLists.txt  cmake_uninstall.cmake
glfw/examples/: boing  gears  heightmap  offscreen  particles  sharing  simple  splitview  wave
glfw/tests/: clipboard  cursor  empty  events  gamma  glfwinfo  icon  iconify  inputlag  joysticks  monitors  msaa  opacity  reopen  tearing  threads  timeout  title  triangle-vulkan  windows
res/models/backpack/: backpack.mtl
res/models/container/: container.mtl
res/models/planet/: planet.mtl
res/models/rock/: rock.mtl
res/models/sphere/: sphere.mtl
res/shaders/: basic.shader  basic_color.shader  light.shader  material.shader
shaders/: ascii.shader  basic.shader  light.shader  material.shader
src/: buffers.cpp  buffers.hh  camera.cpp  camera.hh  containers.hh  engine.cpp  entity.cpp  entity.hh  events.cpp  events.hh  imgui.h  inputs.cpp  inputs.hh  lights.hh  main.cpp  materials.cpp  materials.hh  mesh.cpp  mesh.hh  models.cpp  models.hh  opengl_middleware.cpp  opengl_middleware.hh  renderer.cpp  renderer.hh  shaders.cpp  shaders.hh  stb_image.h  textures.cpp  textures.hh  window.cpp  window.hh
